# crop-recommendation

./: .gitignore  CFS_calculator.py  CFS_categoricer.py  README.md  SNAI_caculator.py  Snai_categoricer.py  model_nc2.py  pyproject.toml
src/crop_recommendation/: CFS_calculator.py  CFS_categorizer.py  SNAI_calculator.py  SNAI_categorizer.py  app.py  dataset.py  model.py  model_nc2.py  predict.py  train.py
