[project]
name = "crop-recommendation"
version = "0.1.0"
description = "Use SNIS calculation to recommend crops"
readme = "README.md"
authors = [
    { name = "siricharishma", email = "cg6540@srmist.edu.in" },
    { name = "waseemR02", email = "waseem.riaz.9999@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[project.scripts]
cr-cfs = "crop_recommendation.CFS_calculator:main"
cr-snai = "crop_recommendation.SNAI_calculator:main"
cr-train = "crop_recommendation.train:main"
cr-predict = "crop_recommendation.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
